examjenkins/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examjenkins-ingress
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
    - host: dev.exam-jenkins.seb-coasne.cloudns.biz
      http:
        paths:
          - path: /api/v1/movies
            pathType: Prefix
            backend:
              service:
                name: movie-service
                port:
                  number: 8002 # Port ./examjenkins/templates/service.yml
          - path: /api/v1/casts
            pathType: Prefix
            backend:
              service:
                name: cast-service
                port:
                  number: 8001 # Port ./examjenkins/templates/service.yml
